--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -62,17 +62,17 @@
     
     <!-- Handles Spring requests -->
     <servlet>
-        <servlet-name>petclinic</servlet-name>
+        <servlet-name>sgcb</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>WEB-INF/spring/webmvc-config.xml</param-value>
+            <param-value>classpath*:META-INF/spring/applicationContext*.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     
     <servlet-mapping>
-        <servlet-name>petclinic</servlet-name>
+        <servlet-name>sgcb</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
@@ -80,13 +80,5 @@
         <session-timeout>10</session-timeout>
     </session-config>
     
-    <error-page>
-        <exception-type>java.lang.Exception</exception-type>
-        <location>/uncaughtException</location>
-    </error-page>
-    
-    <error-page>
-        <error-code>404</error-code>
-        <location>/resourceNotFound</location>
-    </error-page>
+  
 </web-app>
